# shinydir

./: Cargo.toml  LICENSE  README.md  shinydir.toml
.github/workflows/: ci.yml  rust.yml
demo/: demo.tape  demo_config.toml  run
examples/: dated-monthly.sh
src/: automove.rs  checker.rs  cli.rs  config.rs  main.rs  rules.rs
src/commands/: automove.rs  check.rs  mod.rs
