[package]
name = "shinydir"
version = "0.1.1"
edition = "2021"
description = "CLI tool to enforce clean directories by setting rules"
repository = "https://github.com/Unoqwy/shinydir"
license = "MIT"
keywords = ["organization", "classifier", "directories", "files"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
regex = "1.6"
anyhow = "1.0"
shellexpand = "2.1"
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
xdg = "2.4"

[[bin]]
path = "src/main.rs"
name = "shd"
